force-app/main/default/objects/Store_Technology_Info__c/Store_Technology_Info__c.object-meta.xml
<CustomObject>
    <description>Custom Object to capture technology information for stores</description>
    <label>Store Technology Info</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Technology Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Technology Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>