force-app/main/default/objects/Store_Technology_Info__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account name</description>
    <inlineHelpText>Account name</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technology Info for Stores</relationshipLabel>
    <relationshipName>Store_Technology_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>