force-app/main/default/objects/Store_Technology_Info__c/fields/Store_Register_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Store_Register_IP_Address__c</fullName>
    <description>The Store Internet Protocol (IP) Address 
Field Type: Store Data 
Integrated: N</description>
    <inlineHelpText>This field contains the store register IP Address 

Responsible Owner: Desktop Support</inlineHelpText>
    <label>Store Register IP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>