force-app/main/default/objects/Store_Technology_Info__c/fields/Store_Register_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Register_Name__c</fullName>
    <description>Store Register Name 
Field Type: Store Data 
Integrated: N</description>
    <inlineHelpText>Store Register Name</inlineHelpText>
    <label>Store Register Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>