force-app/main/default/objects/Store_Technology_Info__c/fields/Store_Register_TID__c.field-meta.xml
<CustomField>
    <fullName>Store_Register_TID__c</fullName>
    <description>The store register terminal id used to identify the machine used for processing credit cards 
Field Type: Store Data 
Integrated: N</description>
    <inlineHelpText>The store register terminal id used to identify the machine used for processing credit cards 

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Store Register TID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>