force-app/main/default/objects/Store_Technology_Info__c/fields/Store_VeriFone_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Store_VeriFone_IP_Address__c</fullName>
    <description>IP Address for the machine used for processing credit cards
Field Type: Store Data 
Integrated: N</description>
    <inlineHelpText>IP Address for the machine used for processing credit cards

Responsible Owner: Desktop Support</inlineHelpText>
    <label>Store VeriFone IP Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>